first commit from the best group

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- my little davson -->
 <head>
     <!--meta charset=""-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
