corrgindo texto com erros de portugues

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Mensage</label>
+                                <label>Mensagem</label>
                                 <textarea rows="5" class="form-control" placeholder="Message" id="message"></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -242,7 +242,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Local</h3>
-                        <p>1234 Rua das cabritas<br>Tangamandápio, BR 12345-89hue</p>
+                        <p>1234 Rua das cabritas<br>Tangamandápio, BR 12345-89</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Somos jujubeiros</h3>
@@ -302,7 +302,7 @@
                             <h2>Projeto Casa de madeira</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Espaço para colocar  te xto que detalhe o projeto. Esse é um dos projetos da juj uba developments com aprimoramento de usabilidade.</p>
+                            <p>Espaço para colocar texto que detalhe o projeto. Esse é um dos projetos da jujuba developments com aprimoramento de usabilidade.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Casa de madeira</a>
