texto sobre editado

--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
-<<<<<<< HEAD
-<head >
-=======
 <!-- my little davson -->
 <!-- piu -->
 <head>
@@ -178,7 +175,7 @@
                     <p>Somos uma empresa de times multidisciplinares de alta performance e desenvolvemos web responsivo, com gestão de conteúdo. Trabalhamos com as mais diversas tecnologias: Ruby, Python, PHP, MSFT e Java. </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Cras non interdum turpis. Nam a dictum erat. Duis sed commodo nisl, ut finibus mi. Ut sed nibh faucibus nibh sollicitudin ullamcorper. Interdum et malesuada fames ac ante ipsum primis in faucibus. In a ultricies tellus, id auctor lacus. Ut id arcu nec elit volutpat semper a eget mauris. Mauris vel ligula sit amet erat dictum venenatis auctor eu leo.</p>
+                    <p>Contamos com profissionais altamente qualificados em suas áreas. Procurando sempre o máximo de integracao com nossos clientes.</p>
                 </div>
             </div>
         </div>
