--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
     </section>
 
     <!-- About Section -->
-    <section class="success">
+
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -181,7 +182,7 @@
     <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+               <div class="col-lg-12 text-center">
                     <h2>Contato</h2>
                     <hr class="star-primary">
                 </div>
