--- a/index.html
+++ b/index.html
@@ -198,28 +198,28 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Nome</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="">
+                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Name is required.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Email</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Teste">
+                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Email is required.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Telefone</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Telefone obrigatório">
+                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Phone number is required.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Mensage</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message"></textarea>
+                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Message is required."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
