Consertando o link do sobre

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a href="#portfolio">Portifólio</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#">Sobre</a>
+                        <a href="#about">Sobre</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contato</a>
