consertando o modal sem imagem do produto

--- a/index.html
+++ b/index.html
@@ -488,6 +488,7 @@
                         <div class="modal-body">
                             <h2>Submarino amarelo</h2>
                             <hr class="star-primary">
+                            <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
                             <p>Espaço para colocar texto que detalhe o projeto. Esse é um dos projetos da jujuba developments com aprimoramento de usabilidade.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
