--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/profiles.png" alt="">
                     <div class="intro-text">
                         <span class="name">Jujuba Developments</span>
                         <hr class="star-light">
