--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Jujuba Development é uma empresa focada no desenvolvimento de aplicativos para solucionar problemas de comunicação interplanetária. Entendemos que autodisciplina e agilidade são pilares para melhor aproveitamento de nossas doces competências.">
     <meta name="author" content="">
 
     <title>Jujuba Developments</title>
@@ -173,10 +173,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>RAGATANGA</p>
+                    <p>Jujuba Development é uma empresa focada no desenvolvimento de aplicativos para solucionar problemas de comunicação interplanetária.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>shubrables.</p>
+                    <p>Entendemos que autodisciplina e agilidade são pilares para melhor aproveitamento de nossas doces competências.</p>
                 </div>
             </div>
         </div>
