--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Nome</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name">
+                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Name is required.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -213,7 +213,7 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Telefone</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone">
+                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Phone Number is required.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
